--- a/views/oslo.ejs
+++ b/views/oslo.ejs
@@ -15,8 +15,8 @@
 
     <article class="wrap">
         <h1>Oslo surival guide for Web Rebels!</h1>
-        <p>Oslo has consistently been ranked as one of the most expensive cities on the planet. Unfortunately this makes it hard for people coming here as everything is really expensive.</p>
-        <p>However, there are actually ways of visiting Oslo without getting financially ruined. This is what we wanted all of you to know, because we do care about every one of our attendants. You'll find on this page some of the cheap alternatives along with other epic places you should visit if you spend a couple of extra days in Oslo. </p>
+        <p>Coming to a city for the first time you might not know where to go and what to see. We've put together this short list of things and places we appreciate in our beloved city. If you're planning on staying for an extra few days they're well worth a visit.</p>
+        <p>Most of the places are located close to the conference venue and hotel in the borough of Grünerløkka.</p>
 
         <p class="borderlessMenu menu">
         <a href="#Grub">Grub</a> |
@@ -88,7 +88,7 @@
             <p>One of the city's widest selection of beers is to be found at Amundsen. This is a bar with it's own micro brewery right there in the bar. Regardless of your taste in beers, you'll be satisfied with what you get here.</p>
         </div>
         <h2 id="Coffee" class="centrify">Coffee</h2>
-        
+        <div class="separator"></div>
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8esXTTCBtWVECPmmml0EiqX7X5E_7V7zh2gAeYvH3fMyRuz0e">
             <h2><a href="http://timwendelboe.no/">Tim Wendelboe</a></h2>
@@ -117,7 +117,7 @@
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSa5V5NqVu4xILIv48bAB9CK90oqORfeY-H60xwZGlLAkgUuOT7_w">
             <h2><a href="http://www.tiltoslo.no/">Tilt</a></h2>
-            <p>Tilt is one action packed little place located right next to legendary Rockefeller Music Hall. They've got shuffleboard, arcades and pinball to keep you entertained through the night. In addition to a decent selection of fluids to keep you going.
+            <p>Tilt is one action packed little place located right next to legendary <a href="http://www.rockefeller.no/">Rockefeller Music Hall</a>. They've got shuffleboard, arcades and pinball to keep you entertained through the night. In addition to a decent selection of fluids to keep you going.
                 <br><a href="http://www.yelp.com/biz/tilt-oslo">Directions</a></p>
         </div>
         <div class="place">
@@ -129,9 +129,27 @@
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTySG1-3XhImk9U_JRr8y-YaOeuLcpB1EhbIyoEiPcKXMIevQ6KkQMJWrc">
             <h2><a href="http://www.parkteatret.no/">Parkteateret</a></h2>
-            <p>Parkteatret Scene is an old cinema from 1907 now functioning mainly as a concert venue with a capacity of 500. Our main focus is pop/rock, but the venue is also great for indie, bluegrass, country, rockabilly, jazz and blues. We often have either a concert or disco for children on Sundays. Apart from concerts, theres often documentary films or other kinds of movie nights on Wednesdays, often with debates or discussions on the topics raised.<br>
+            <p>Parkteatret Scene is an old cinema from 1907 now functioning mainly as a concert venue with a capacity of 500. Their main focus is pop/rock, but the venue is also great for indie, bluegrass, country, rockabilly, jazz and blues. There is often either a concert or disco for children on Sundays. Apart from concerts, theres often documentary films or other kinds of movie nights on Wednesdays, often with debates or discussions on the topics raised. It is also a great place to just hang out and have something to drink.<br>
                 <a href="https://plus.google.com/111196340555251862088/about?hl=en">Directions</a></p>
+        </div>        
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQpS_pvuHSjx4Wjk7Iv4QQt3pGmL38nAr9hGaIwi3eYwgZ9nG-U">
+            <h2><a href="http://www.lufthavna.no/">Lufthavna / Cafe Mir</a></h2>
+            <p>This non-profit consists of galleries, cafe and studios for local artists located in Grünerløkka. <a href="http://www.lufthavna.no/cafe-mir">Cafe Mir</a> has regular events with concerts and DJ sessions happening all week. If you want to see what's happening in the underground scene of the arts this is a good starting place. It is also a nice place to just hang out. <br><a href="http://www.lufthavna.no/havna/kontakt">Directions</a></p>
+        </div>      
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSv2ta2S58drYqWufDnXasyPupdRL4rHKMKtEZsCByqyiVyrbhC">
+            <h2><a href="http://www.internasjonalen.no/">Internasjonalen</a></h2>
+            <p>Right in the heart of socialist Norway in <a href="http://en.wikipedia.org/wiki/Youngstorget">Youngstorget</a> there is a very trendy place, Internasjonalen, which serves up a nice selection of beers and drinks. They regularly have concerts and DJ sessions happening on the second floor. It makes for a nice stop when heading into the city center from Grünerløkka.<br>
+                <a href="https://plus.google.com/107598792431312063309/about?hl=en">Directions</a></p>
         </div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSkAyiIK5aH7LTYTKVPsM1_Udj_osBheoIKCWo_ToWNBOSezhPwWw">
+            <h2><a href="http://www.cafemono.no/">Cafe Mono</a></h2>
+            <p>The beating pulse of the rock'n roll scene in Oslo can be found at Mono, right next to <a href="http://en.wikipedia.org/wiki/Youngstorget">Youngstorget</a>. They regularly put on concerts and it's a great place to catch some amazing bands. During the day time they also have an American style diner which servers up food which will help you recover from a night of rock'n roll.<br>
+                <a href="https://plus.google.com/118396515377039887427/about?hl=en">Directions</a></p>
+        </div>
+
         <h2 id="Sights" class="centrify">Sights</h2>
         <div class="separator"></div>
         <div class="place">
@@ -140,6 +158,14 @@
             <p>This year marks the 150 year anniversary for one of the worlds greatest painters, Edward Munch. The Munch Museum has the largest collection of his work in the world and it has gotten a touch up in relation to the anniversary. 
                 <br><a href="https://maps.google.com/maps?ie=UTF-8&daddr=T%C3%B8yengata+53,+0578+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.917050,10.775182&cid=0,0,7295538454545109531&hq=munch+museet&hnear=munch+museet">Directions</a></p>
         </div>
+        <div class="place">
+            <img class="imageFrame" width="140" height="140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQ-DU-tkrT36Tl0IVDFKAEiH4xXYisYCsHIm1ue8RU6B8f5ZsmA_8_Ppg">
+            <h2><a href="http://www.nhm.uio.no/english/">The Natural History Museum</a></h2>
+            <p>It is the home of the world’s oldest complete primate skeleton <a href="http://www.nhm.uio.no/english/visiting/geological-museum/ida/">Ida</a>, makes for a excellent lazy Sunday experience. With it's <a href="http://www.nhm.uio.no/english/visiting/botanical-garden/">Botanical garden</a>, <a href="http://www.nhm.uio.no/english/visiting/zoological-museum/">Zoological</a> and <a href="http://www.nhm.uio.no/english/visiting/geological-museum/">Geological</a> you are certain to have an educational time. The museum is located in lovely Tøyen and it is close to the Munch Museum and the Tøyen park.<br><a href="http://www.nhm.uio.no/english/visiting/map/">Directions</a>
+                </p>
+        </div>
+
+        
         <div class="place">
             <img class="imageFrame" width="140" height="140" src="http://t1.gstatic.com/images?q=tbn:ANd9GcQBy-urxmDclKz4bwwCjH8tvVnnomyt5L2zeuo2I_52bpB6APl8LA">
             <h2><a href="http://www.operaen.no/en/">Oslo Opera House</a></h2>
@@ -152,9 +178,10 @@
             <p>The Frogner Park (Norwegian: Frognerparken) is a public park located in the borough of Frogner. The Frogner Park contains, in its present centre, the world famous Vigeland Sculpture Arrangement designed by Gustav Vigeland. Frogner Park consists of various bridges, fountains and a well known picnic area, popular in the summer for games and relaxation. It also contains both Frognerbadet and Frogner Stadium. The park is the largest park in the city and covers 45 hectares.<br>It's a great place to just hang out and check out some crazy sculptures and enjoy the sights.
                 <br><a href="https://maps.google.com/maps?ie=UTF-8&daddr=Kirkeveien/Middelthuns+gate,+0268+Oslo,+Norway&panel=1&f=d&fb=1&dirflg=d&geocode=0,59.924910,10.707039&cid=0,0,953405644286555817&hq=frogner+parken">Directions</a></p>
         </div>
+        <p>Feel that some place is missing? <a href="https://github.com/webrebels/web-rebels-2013/blob/master/views/oslo.ejs">Submit a pull request on GitHub</a> and we might add it!</p>
+        <p>This is just a list of places we put together and none of the places are associated with the Web Rebels or get paid to listed.</p>
     </article>
-    <!--
-    <a href="https://github.com/webrebels/web-rebels-2013/blob/master/views/oslo.ejs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>-->
+    <a href="https://github.com/webrebels/web-rebels-2013/blob/master/views/oslo.ejs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
 
     <% include snips/footer.ejs %>
 
